[gd_scene load_steps=20 format=3 uid="uid://smkv4posrhc8"]

[ext_resource type="Script" path="res://scripts/tex_to_hex_tool.gd" id="1_1msrh"]
[ext_resource type="Script" path="res://scripts/drag-and-drop-collider.gd" id="2_4lqud"]
[ext_resource type="Texture2D" uid="uid://b5ecbxms842jg" path="res://assets/sprites/toolSprites/Hex Converter.png" id="2_shvys"]
[ext_resource type="Animation" uid="uid://bo5lm4kv7nx3g" path="res://assets/Animations/open-window.res" id="2_uefdw"]
[ext_resource type="Shader" path="res://assets/shaders/vapor.gdshader" id="3_xtrt8"]
[ext_resource type="Texture2D" uid="uid://ck8ji715s7ub5" path="res://assets/sprites/toolSprites/ToolButton.png" id="4_ulp66"]
[ext_resource type="Texture2D" uid="uid://b86jpd0w3mbne" path="res://assets/sprites/toolSprites/ToolButton(pressed).png" id="5_g6b8p"]
[ext_resource type="Texture2D" uid="uid://kvd4w5bigwky" path="res://assets/sprites/toolSprites/ToolButton(selected).png" id="6_1lway"]
[ext_resource type="BitMap" uid="uid://cnjmm1n2fwnsx" path="res://assets/sprites/toolSprites/ToolButton(mask).png" id="7_5ep6n"]
[ext_resource type="FontFile" uid="uid://c4o75dteiydg8" path="res://assets/fonts/Conthrax-SemiBold.otf" id="8_4aiwx"]
[ext_resource type="Texture2D" uid="uid://blfxngevniao3" path="res://assets/sprites/toolSprites/Circle Outer.png" id="10_wxw6u"]
[ext_resource type="Texture2D" uid="uid://v1piutxhuj4s" path="res://assets/sprites/toolSprites/Circle Inner.png" id="11_5vlwx"]

[sub_resource type="Animation" id="Animation_lpain"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oin8t"]
_data = {
"RESET": SubResource("Animation_lpain"),
"open-window": ExtResource("2_uefdw")
}

[sub_resource type="Animation" id="Animation_age0k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InnerCircle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterCircle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vk3ld"]
resource_name = "Spin"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InnerCircle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OuterCircle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_86y54"]
_data = {
"RESET": SubResource("Animation_age0k"),
"Spin": SubResource("Animation_vk3ld")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_km1x3"]
shader = ExtResource("3_xtrt8")
shader_parameter/lines = 10
shader_parameter/color1 = Color(0.194821, 0.353942, 0.469564, 1)
shader_parameter/color2 = Color(0.175676, 0.579085, 0.75692, 1)
shader_parameter/speed = 0.08
shader_parameter/alpha = 0.89
shader_parameter/noise_amount = 0.06
shader_parameter/effect_factor = 0.87

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jvu3"]
size = Vector2(613.096, 27.7644)

[node name="TextHexTool" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 529.0
offset_bottom = 133.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(282, 80)
script = ExtResource("1_1msrh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oin8t")
}
speed_scale = 1.7

[node name="Spinner" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_86y54")
}
autoplay = "Spin"

[node name="ToolFrame" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(313, 67.25)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_shvys")

[node name="Info" type="Label" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_km1x3")
layout_mode = 0
offset_top = 4.0
offset_right = 180.0
offset_bottom = 176.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(0.560784, 0.866667, 1, 1)
theme_override_fonts/font = ExtResource("8_4aiwx")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 7.0
offset_right = 279.0
offset_bottom = 30.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.560784, 0.866667, 1, 1)
theme_override_fonts/font = ExtResource("8_4aiwx")
theme_override_font_sizes/font_size = 16
text = "Hex Converter"

[node name="CollisionContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 164.0
offset_top = 64.0
offset_right = 391.0
offset_bottom = 94.0

[node name="Area2D" type="Area2D" parent="CollisionContainer"]
z_index = 2
position = Vector2(113, 15)
scale = Vector2(0.369334, 1.1)
script = ExtResource("2_4lqud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionContainer/Area2D"]
shape = SubResource("RectangleShape2D_3jvu3")

[node name="TextToHexBTN" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 452.0
offset_top = 60.0
offset_right = 499.0
offset_bottom = 74.0
scale = Vector2(2, 2)
pivot_offset = Vector2(47, 17)
texture_normal = ExtResource("4_ulp66")
texture_pressed = ExtResource("5_g6b8p")
texture_hover = ExtResource("6_1lway")
texture_click_mask = ExtResource("7_5ep6n")

[node name="Label" type="Label" parent="TextToHexBTN"]
texture_filter = 1
layout_mode = 0
offset_right = 94.0
offset_bottom = 28.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.560784, 0.866667, 1, 1)
theme_override_fonts/font = ExtResource("8_4aiwx")
theme_override_font_sizes/font_size = 12
text = "Hex"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HexToTextBTN" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 449.0
offset_top = 106.0
offset_right = 496.0
offset_bottom = 120.0
scale = Vector2(2, 2)
pivot_offset = Vector2(45, 17)
texture_normal = ExtResource("4_ulp66")
texture_pressed = ExtResource("5_g6b8p")
texture_hover = ExtResource("6_1lway")
texture_click_mask = ExtResource("7_5ep6n")

[node name="Label" type="Label" parent="HexToTextBTN"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 29.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.560784, 0.866667, 1, 1)
theme_override_fonts/font = ExtResource("8_4aiwx")
theme_override_font_sizes/font_size = 12
text = "Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropBox" type="Control" parent="."]
z_index = 1
anchors_preset = 0
offset_left = 162.0
offset_top = 63.0
offset_right = 389.0
offset_bottom = 95.0

[node name="Shadow" type="ColorRect" parent="DropBox"]
z_index = -1
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 227.0
offset_bottom = 31.0
color = Color(0.152941, 0.34902, 0.458824, 1)

[node name="BG" type="ColorRect" parent="DropBox"]
z_index = -1
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 225.0
offset_bottom = 31.0
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="OuterCircle" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(64, 69)
scale = Vector2(2, 2)
texture = ExtResource("10_wxw6u")
offset = Vector2(0, -0.5)

[node name="InnerCircle" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(64, 67)
scale = Vector2(2, 2)
texture = ExtResource("11_5vlwx")
offset = Vector2(0.5, -0.5)

[connection signal="pressed" from="TextToHexBTN" to="." method="_on_text_to_hex_btn_pressed"]
[connection signal="pressed" from="HexToTextBTN" to="." method="_on_hex_to_text_btn_pressed"]
